Added module support for Java version >8